Added project links

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-## B.Tech Project Source Codes
+<h2> B.Tech Project Source Codes </h2>
 
-- [SimGNN Implementation(Keras)](https://github.com/pulkit1joshi/SimGNN)
-- [SimGNN implementation(Pytorch)](https://github.com/pulkit1joshi/py-SimGNN)
+<a href="https://github.com/pulkit1joshi/SimGNN">SimGNN Implementation(Keras)</a>
+<a href="https://github.com/pulkit1joshi/py-SimGNN">SimGNN Implementation(Pytorch)</a>
 
