--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 <h2> B.Tech Project Source Codes </h2>
 
-<a href="https://github.com/pulkit1joshi/SimGNN">SimGNN Implementation(Keras)</a>
-<a href="https://github.com/pulkit1joshi/py-SimGNN">SimGNN Implementation(Pytorch)</a>
+<a href="https://github.com/pulkit1joshi/SimGNN">1. SimGNN Implementation(Keras)</a>
+<br>
+<a href="https://github.com/pulkit1joshi/py-SimGNN">2. SimGNN Implementation(Pytorch)</a>
+<br>
 
