--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@ layout: default
 ---
 
 <h2> B.Tech Project Source Codes </h2>
-
+<br>
 <a href="https://github.com/pulkit1joshi/SimGNN">1. SimGNN Implementation(Keras)</a>
+<br>
 <br>
 <a href="https://github.com/pulkit1joshi/py-SimGNN">2. SimGNN Implementation(Pytorch)</a>
 <br>
+<br>
+<h4> Synthetic Data Generation using Networkx </h4>
 
+1. Generate a random graph (g1) and clone it (g2). <br>
+2. Now, randomly remove/add edges into one of these graphs.<br>
+3. Labels were added on the basis of degree of the node<br>
+4. Further, networkx library function is used to calculate approximate GED<br>
+5. The graphs are exported as a json file per pair.<br>
+<br>
+<a href="https://github.com/pulkit1joshi/py-SimGNN/blob/develop/syntheticGen/generator.py">3. SimGNN Synthetic Data Generator(Pytorch)</a>
+<br>
