--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ layout: default
 <a href="https://github.com/pulkit1joshi/py-SimGNN">2. SimGNN Implementation(Pytorch)</a>
 <br>
 <br>
-<a href="https://github.com/pulkit1joshi/py-SimGNN/blob/develop/syntheticGen/generator.py">3. SimGNN Synthetic Data Generator(Pytorch)</a>
+<a href="https://github.com/pulkit1joshi/SimGNN/blob/main/SynthData/syngen.py">3. SimGNN Synthetic Data Generator</a>
