--- a/index.html
+++ b/index.html
@@ -11,3 +11,19 @@ layout: default
 <br>
 <br>
 <a href="https://github.com/pulkit1joshi/SimGNN/blob/main/SynthData/syngen.py">3. SimGNN Synthetic Data Generator</a>
+<script>
+      (function (window, document, s, ele, f, js, fjs) {
+        window["JS-Widget"] = ele;
+        window[ele] =
+          window[ele] ||
+          function () {
+            (window[ele].q = window[ele].q || []).push(arguments);
+          };
+        (js = document.createElement(s)), (fjs = document.getElementsByTagName(s)[0]);
+        js.id = ele;ele;
+        js.src = f;
+        js.async = 1;
+        fjs.parentNode.insertBefore(js, fjs);
+      })(window, document, "script", "myWidget", "https://github.com/pulkit1joshi/myWidget/blob/main/dist/widget.js");
+      myWidget("init", "Pixibo", "This is a test message that will be ignored");
+ </script>
