--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ layout: default
         js.src = f;
         js.async = 1;
         fjs.parentNode.insertBefore(js, fjs);
-      })(window, document, "script", "myWidget", "https://github.com/pulkit1joshi/myWidget/blob/main/dist/widget.js");
+      })(window, document, "script", "myWidget", "https://raw.githubusercontent.com/pulkit1joshi/myWidget/main/dist/widget.js");
       myWidget("init", "Pixibo", "This is a test message that will be ignored");
  </script>
